--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <button id="button2">Get Customers</button>
     <br></br>
     <h1>Customer</h1>
-    <div id="customer"></div>
+    <div id="customer"></div><br><br>
+    <hr>
     <h1>Customers</h1>
     <div id="customers"></div>
   </div>
